Added an image for myself and added it to the template.

--- a/src/index.page
+++ b/src/index.page
@@ -1,6 +1,6 @@
-=========
-Seth Hall
-=========
+============
+Current Work
+============
 
 I am a research engineer in the networking group at ICSI.  My primary activity
 is working on the Bro Intrusion Detection System and promoting it's use
