Spelling mistake and added a link.

--- a/src/index.page
+++ b/src/index.page
@@ -2,7 +2,7 @@
 Current Work
 ============
 
-I am a research engineer in the networking group at ICSI_. My primary activity
+I am a research engineer in the `networking group <http://www.icir.org/>`_ at ICSI_. My primary activity
 is working on the `Bro Intrusion Detection System <http://www.bro-ids.org/>`_
 and promoting it's use in various industries under a grant from the NSF in the
 SDCI program.
@@ -21,7 +21,7 @@ found that I could provide a large benefit with novel detection techniques by
 watching the network with Bro. Time progressed and now I'm working on Bro full
 time.
 
-I currently live in Worthinton, OH with my wife and two children.
+I currently live in Worthington, OH with my wife and two children.
 
 .. _ICSI: http://www.icsi.berkeley.edu/
 .. _ICIR: http://www.icir.org/
