Small site update.

--- a/src/index.page
+++ b/src/index.page
@@ -4,7 +4,7 @@ Current Work
 
 I am a research engineer in the `networking group <http://www.icir.org/>`_ at ICSI_. My primary activity
 is working on the `Bro Intrusion Detection System <http://www.bro-ids.org/>`_
-and promoting it's use in various industries under a grant from the NSF in the
+and promoting its use in various industries under a grant from the NSF in the
 SDCI program.
 
 If you are looking for someone to attend an event and speak about Bro, please
